--- a/public/pages/absen/clockin.html
+++ b/public/pages/absen/clockin.html
@@ -1,5 +1,5 @@
-<template>
-<div class="page page-homepage light" data-name="homepage">
+
+<div class="page light page-content">
     <div class="appbar bg-template">
         <div class="appbar-inner">
             <div class="left">
@@ -11,10 +11,10 @@
         </div>
     </div>
 
-    <div class="block mt-0 text-align-center" style="height: 370px;">
+    <div class="block mt-0 mb-0 text-align-center" style="height: 370px;">
         <div class="row" style="height: 100%;">
             <div class="col text-align-center align-self-center">
-                <div class="container" style="border-radius: 10%; border: 2px solid gray; padding: 40px; margin-left:60px; margin-right: 60px;">
+                <div class="container ml-3 mr-3" style="border-radius: 10%; border: 2px solid gray; padding: 40px;">
                     <i class="fas fa-camera text-mute text-secondary" style="font-size: 150px; color: gray;"></i>
                 </div>
                 <h4 class="mt-5 text-mute pt-4" style="color: gray;">Take Your Selfie</h4>
@@ -22,13 +22,20 @@
         </div>
     </div>
 
-    <div class="block">
+    <div class="block mt-0">
         <div class="row ml-1 width-100 align-items-center mt-1 mb-2">
             <div class="col-auto px-0 padding-vertical-half text-align-center" style="width: 30px;">
                 <i class="fas fa-tasks text-template" style="font-size: 25px;"></i>
             </div>
             <div class="col align-self-center pr-0">
-                <h6 class="font-weight-bold mb-1 mt-1" @click="openVerticalButtons" style="font-size: 16px;">Kerjaan</h6>
+                <!-- <h6 class="font-weight-bold mb-1 mt-1" @click="openVerticalButtons" style="font-size: 16px;">Kerjaan</h6> -->
+                <div class="item-input-wrap mt-2" style="font-size: 18px; font-weight: bold;">
+                    <select name="task" placeholder="Please choose...">
+                      <option value="Kerjaan">Kerjaan</option>
+                      <option value="Keluar Kota">Keluar Kota</option>
+                      <option value="Pemasaran">Pemasaran</option>
+                    </select>
+                </div>
             </div>
         </div>
         <div class="row ml-1 width-100 align-items-center mt-1 mb-2">
@@ -36,7 +43,13 @@
                 <i class="fas fa-map-marker-alt text-template" style="font-size: 25px;"></i>
             </div>
             <div class="col align-self-center" style="width: 100%;">
-                <h6 class="font-weight-bold mb-1 mt-1" style="font-size: 16px;">MNZ Company</h6>
+                <div class="item-input-wrap mt-2" style="font-size: 18px; font-weight: bold;">
+                    <select name="task" placeholder="Please choose...">
+                      <option value="MNZ Company">MNZ Company</option>
+                      <option value="PT UBIG">PT UBIG</option>
+                      <option value="Pro Company">Pro Company</option>
+                    </select>
+                </div>
             </div>
             <div class="col right text-align-right align-self-center">
                 <div class="calendar-row text-align-right">
@@ -67,30 +80,15 @@
         </div>
     </div>
 </div>
-</template>
-
+<!-- </template> -->
+<!-- 
 <script>
-    return {
-      methods: {
-        openVerticalButtons: function () {
-          var app = this.$app;
-          app.dialog.create({
-            title: 'Pilih Tugas',
-            buttons: [
-              {
-                text: 'Kerjaan',
-              },
-              {
-                text: 'Keluar Kota',
-              },
-              {
-                text: 'Pemasaran',
-              },
-            ],
-            verticalButtons: true,
-            
-          }).open();
-        }
-      }
-    }
-  </script>
+    let today = new Date();
+
+    let month = today.getMonth() + 1;
+    let year = today.getFullYear();
+    let date = today.getDate();
+
+    let current_date = `${year}-${month}-${date}`;
+    console.log(current_date);
+</script> -->
