--- a/public/pages/absen/detailclockin.html
+++ b/public/pages/absen/detailclockin.html
@@ -1,4 +1,5 @@
-<div class="page page-homepage light" data-name="homepage">
+
+<div class="page light page-content">
         <div class="appbar bg-template">
             <div class="appbar-inner">
                 <div class="left">
