--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -90,14 +90,16 @@
                         </a>
                     </div>
                     <div class="col resizable" style="min-width: 50px">
-                        <span>
-                            <div class="card shadow border-0">
-                                <div class="card-content card-content-padding">
-                                    <i class="material-icons text-template" style="font-size: 50px;" aria-hidden="true">free_breakfast</i>
+                        <a href="/photo/">
+                            <span>
+                                <div class="card shadow border-0">
+                                    <div class="card-content card-content-padding">
+                                        <i class="material-icons text-template" style="font-size: 50px;" aria-hidden="true">free_breakfast</i>
+                                    </div>
                                 </div>
-                            </div>
-                            <p class="text-secondary mt-1 text-mute small mt-3">Break Out</p>
-                          </span>
+                                <p class="text-secondary mt-1 text-mute small mt-3">Break Out</p>
+                              </span>
+                        </a>
                       </div>
                     <div class="col resizable resizable-fixed" style="min-width: 50px">
                         <span>
@@ -146,7 +148,7 @@
                 </div>
             </div>
 
-            <h6 class="block-title mt-3 mb-0" style="text-transform: capitalize;">History<a href="#tab-5" class="float-right small tab-link">View More</a></h6>
+            <h6 class="block-title mt-3 mb-0" style="text-transform: capitalize;">History<a href="#tab-4" class="float-right small tab-link">View More</a></h6>
             <div class="block padding-vertical mb-0">
                 <div class="card shadow-sm border-0 mb-2">
                     <div class="card-content card-content-padding">
@@ -429,7 +431,7 @@
         <div id="tab-4" class="page-content tab">
 
             <div class="fab fab-extended fab-right-bottom ">
-                <a href="#" class="bg-template">
+                <a href="/filterhis/" class="bg-template">
                   <i class="fas fa-filter text-color-white"></i>
                 </a>
             </div>
