--- a/public/pages/ijin/detailijinmenunggu.html
+++ b/public/pages/ijin/detailijinmenunggu.html
@@ -1,4 +1,4 @@
-<div class="page page-homepage light" data-name="homepage">
+<div class="page light page-content">
     <div class="appbar">
         <div class="appbar-inner">
             <div class="left">
