--- a/public/pages/absen/detailclockin.html
+++ b/public/pages/absen/detailclockin.html
@@ -1,4 +1,4 @@
-
+<template>
 <div class="page light page-content">
         <div class="appbar bg-template">
             <div class="appbar-inner">
@@ -10,10 +10,10 @@
                 </div>
             </div>
         </div>
-    
+
         <div class="block mt-0 mb-0 text-align-center" style="height: 140px;">
             <div class="row no-gap" style="height: 100%;">
-                <div class="col-66" style="background-image: url('../../img/gmaps.png');height: 100%;background-size: cover;"></div>
+                <div class="col-66 demo-map-container" id="googleMap" style="height: 100%;"></div>
                 <div class="col-33" style="background-image: url('../../img/user2.png');height: 100%;background-size: cover;">
                     <!-- <img src="img/user2.png" alt=""> -->
                 </div>
@@ -53,3 +53,62 @@
             </div>
         </div>
     </div>
+</template>
+
+<script>
+    return {
+    data() {
+      return {
+        mapStyleLoaded: false,
+        mapScriptLoaded: false,
+        mapInitialized: false,
+      }
+    },
+    methods: {
+
+      loadMapAssets: function () {
+        var self = this;
+        var style = document.createElement('link');
+        style.rel = 'stylesheet';
+        style.href = 'https://unpkg.com/leaflet@1.4.0/dist/leaflet.css';
+        style.integrity='sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==';
+        style.setAttribute('crossorigin', '')
+        style.onload = function () {
+          self.mapStyleLoaded = true;
+          if (self.mapScriptLoaded) self.initMap();
+        }
+        document.head.appendChild(style);
+
+        var script = document.createElement('script');
+        script.src = 'https://unpkg.com/leaflet@1.4.0/dist/leaflet.js';
+        script.integrity='sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg==';
+        script.setAttribute('crossorigin', '')
+        script.onload = function () {
+          self.mapScriptLoaded = true;
+          if (self.mapStyleLoaded) self.initMap();
+        }
+        document.head.appendChild(script);
+      },
+      initMap: function () {
+        var self = this;
+        var mymap = L.map(self.$el.find('.demo-map-container')[0], { zoomControl: false, }).setView([-7.920969, 112.6191526], 14);
+        L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1Ijoibm9saW1pdHM0d2ViIiwiYSI6ImNqcXA4NTdmczBocm8zeG13Zm1zNTdyeDAifQ.HoJgmqQ_uH4zLyNJmiY98A', {
+          maxZoom: 16,
+          id: 'mapbox.streets'
+        }).addTo(mymap);
+        self.mapInitialized = true;
+      },
+    },
+    on: {
+      pageAfterIn: function () {
+        var self = this;
+        if (self.mapInitialized) return;
+        if (!window.L) {
+          self.loadMapAssets();
+          return;
+        }
+        self.initMap();
+      },
+    },
+  }
+</script>
