--- a/public/pages/absen/camera.html
+++ b/public/pages/absen/camera.html
@@ -13,7 +13,7 @@
             <video autoplay="true" id="video" width="100%"></video>
     </div>
     </template>
-    <script>
+    <script>//we
         return{
             
            on:{
