--- a/public/pages/absen/camera.html
+++ b/public/pages/absen/camera.html
@@ -20,7 +20,7 @@
                 <div class="col align-self-center">
                     <h4 class="capture">test capture</h4>
                 </div>
-            </div>r>
+            </div>
             <div class="row text-align-center">
                     <canvas id="canvas" width="300" height="200" style="background-color: gray;" ></canvas>
             </div>
