--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,5 +1,6 @@
 <template>
 <div class="page page-homepage light" data-name="homepage">
+
     <div class="toolbar tabbar toolbar-bottom o-visible">
         <div class="toolbar-inner o-visible tabs-max-width">
             <a href="#tab-1" class="tab-link tab-link-active"><i class="material-icons">home</i></a>
@@ -20,7 +21,7 @@
                             <li><a href="/perusahaan/" class="list-button popover-close text-color-black px-2"><i class="fas fa-building text-color-gray" style="font-size: large; padding-right: 10px;"></i><span class="text-color-gray">Profil Perusahaan</span></a></li>
                             <li><a href="" class="list-button popover-close text-color-black px-2"><i class="fas fa-question-circle text-color-gray" style="font-size: large; padding-right: 10px;"></i><span class="text-color-gray">Bantuan</span></a></li>
                             <li><a href="/ttgapk/" class="list-button popover-close text-color-black px-2"><i class="fas fa-exclamation-circle text-color-gray" style="font-size: large; padding-right: 10px;"></i><span class="text-color-gray">Tentang Aplikasi</span></a></li>
-                            <li><a href="" class="list-button popover-close text-color-black px-2"><i class="fas fa-lock text-color-gray" style="font-size: large; padding-right: 10px;"></i><span class="text-color-gray">Ubah Password</span></a></li>
+                            <li><a href="/coba/" class="list-button popover-close text-color-black px-2"><i class="fas fa-lock text-color-gray" style="font-size: large; padding-right: 10px;"></i><span class="text-color-gray">Ubah Password</span></a></li>
                             <li><a href="" class="list-button popover-close text-color-black px-2"><i class="fas fa-sign-out-alt text-color-red" style="font-size: large; padding-right: 10px;"></i><span class="text-color-red">Keluar</span></a></li>
                         </ul>
                     </div>
@@ -325,7 +326,7 @@
                 </div>
               </div>
         </div>
-        <div id="tab-3" class="page-content tab">
+        <div id="tab-3" class="page-content tab" style="overflow-x: hidden;">
             <div class="appbar">
                 <div class="appbar-inner">
                    <div class="title"><h5 class="page-subtitle mb-4">Jadwal</h5></div>
@@ -443,7 +444,7 @@
                         <h4>Profile</h4>
                         <div class="avatar avatar-90 no-shadow border-0 mt-2">
                             <img src="img/user2.png" @click="getpick" id="img-custom" alt="">
-                            <input type="file" id="real-file-aq" @click="GAMBAR" capture="camera-front" accept="image/*" hidden="hidden"/>
+                            <input type="file" id="real-file-aq" @click="GAMBAR" capture="camera" accept="image/*" hidden="hidden"/>
                         </div>
                         <h5 class="mt-3">Deni Yudi Saputra</h5>
                         <h6 class="mt-3 text-mute">Programmer</h6>
